assets/css/style.css
header {
	height: 90px;
	background-color: white;
	border-bottom: solid 2px #cccccc;
}

nav {
	float: right;
	margin-right: 155px;
	padding-top: 36px;
	padding-bottom: 36px;
}

h1 {
	font-family: 'Georgia', Times, Times New Roman, serif;
	color: #ffffff;
	font-size: 28px;
	background-color: #4aaaa5;
	font-weight: bolder;
	height: 90px;
	padding-left: 35px;
	padding-right: 35px;
	float: left;
	margin-left: 155px;
	overflow: auto;
	line-height: 90px;
}

h2 {
	font-family: 'Georgia', Times, Times New Roman, serif;
	color: #4aaaa5;
	font-size: 28px;
	font-weight: bolder;
	clear: both;
	margin-top: 35px;
	margin-bottom: 35px;
	margin-left: 25px;	
}

p {
	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	color: #777777;
	font-size: 18px;
	line-height: 1.5;
	padding: 0px 25px 25px 25px;
}

a {
	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	color: #777777;
	font-size: 18px;
	line-height: 1.5;
	text-decoration: none;
}

li {
	float: left;
	padding-right: 20px;
	padding-left: 20px;
}

li+li {
	border-left: 1px solid #cccccc;
}

div {
	width: 650px;
	border: 1px solid #dddddd;
	float: left;
	margin-left: 155px;
	margin-top: 40px;
}

aside {
	width: 270px;
	border: 1px solid #dddddd;
	float: right;
	margin-top: 40px;
}

hr {
	margin-left: 25px;
	margin-right: 25px;
	margin-bottom: 30px;
    border-width: 1.5px;
    color: #cccccc;
    border-style: solid;
}

#aboutmepic {
	float: left;
	margin: 0px 25px 0px 25px;
}

